Proofed and edited published SA translations (from SA 1.1-153).

--- a/01_agama/samyukta/01/SA1_1.md
+++ b/01_agama/samyukta/01/SA1_1.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 1. The Aggregates | 1 (1). Impermanent'
 type: kramdown
 base: ../../../
-previous: index.html
+previous: SA1_1-4.html
 next: SA1_2.html
 ---
 
@@ -26,15 +26,17 @@ next: SA1_2.html
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {: #p5}
 
+---
+
 ### Notes
 
-1. {:#n1} This sūtra has been reconstituted following the description found at T99.2.1a14. Close Pali parallels are [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"}, [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}, and [SĀ 2.1](../02/SA2_1.html){:target="_blank"} are close parallels. [\[back\]](#ref1)
+1. {:#n1} [SN 22.12](https://suttacentral.net/sn22.12){:target="_blank"}, [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}, and [SĀ 2.1](../02/SA2_1.html){:target="_blank"} are close parallels to this sūtra. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
