--- a/01_agama/samyukta/01/SA1_10.md
+++ b/01_agama/samyukta/01/SA1_10.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 10 (7). Delighting in Form'
 type: kramdown
 base: ../../../
 previous: SA1_9.html
-next: SA1_11.html
+next: SA1_11-14.html
 ---
 
 # [The Related Discourses](../index.html)
@@ -23,20 +23,23 @@ next: SA1_11.html
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
-###### Summary Verse
+#### Summary Verse
 * {:.verse}[1] Impermanent, [2] painful, [3] empty,\\
 And [4] not self; [5] correctly contemplated;\\
 [6-9] Four ways of not knowing;\\
 And [10] delighting in form.
 
+---
+
 ### Notes
+
 1. {:#n1} This sūtra is parallel with [SN 22.29](https://suttacentral.net/sn22.29){:target="_blank"} and SĀ 2.10. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
