--- a/01_agama/samyukta/01/SA1_147.md
+++ b/01_agama/samyukta/01/SA1_147.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 147. Three Gentlemen'
+title: 'The Related Discourses | 1. The Aggregates | 147 (35). Three Gentlemen'
 type: kramdown
 base: ../../../
 previous: SA1_146.html
@@ -9,7 +9,7 @@ next: SA1_148.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 147. Three Gentlemen
+### 147 (35). Three Gentlemen
 
 1\. Thus have I heard: One time, the Buddha was staying at the Bamboo Park Monastery in Cedi.
 {:#p1}
@@ -22,7 +22,7 @@ next: SA1_148.html
 
 The monks said to the Buddha, “No, Bhagavān.”
 
-4\. The Buddha told the monks, “Good, good! Form is impermanent and liable to change. Tiring and parting with desire [for form], it ceases, becomes tranquil, and disappears. Thus, since the distant past, all forms have been impermanent, painful, and liable to change. Known in this way, the conditioning of those forms produces the contaminants, which are harmful, burning, and grievous. Destroy them all. Once they are destroyed, there’s no attachment. Once there’s no attachment, you’ll live in well-being. Once you live in well-being, you’ll attain parinirvāṇa. *Feeling, conception, volition, and consciousness are likewise.*”
+4\. The Buddha told the monks, “Good, good! Form is impermanent and liable to change. Tiring and parting with desire for it, it ceases, becomes tranquil, and disappears. Thus, since the distant past, all forms have been impermanent, painful, and liable to change. Known in this way, the conditioning of those forms produces the contaminants, which are harmful, burning, and grievous. Destroy them all. Once they are destroyed, there’s no attachment. Once there’s no attachment, one will live in well-being. Once they live in well-being, they’ll attain parinirvāṇa. *Feeling, conception, volition, and consciousness are likewise.*”
 {:#p4}
 
 5\. When the Buddha spoke this sūtra, those three upright men didn’t produce the contaminants, and their minds were liberated.
@@ -31,15 +31,17 @@ The monks said to the Buddha, “No, Bhagavān.”
 6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p6}
 
+---
+
 ### Notes
 
-1. {:#n1}*fully abides in realization.* Ch. 作證具足住. In SĀ 1.61, 1.154 et al, this is a synonym for liberation from rebirth. The expression “fully abide” is also used for attaining each of the four dhyānas in SĀ 4.10, 6.5, et al. [\[back\]](#ref1)
+1. {:#n1}*fully abides in realization.* Ch. 作證具足住. In SĀ 1.61, 1.154 et al, this is a synonym for liberation from rebirth. The expression “to fully abide” is also used for attaining each of the four dhyānas in SĀ 4.10, 6.5, et al. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
