--- a/01_agama/samyukta/01/SA1_149.md
+++ b/01_agama/samyukta/01/SA1_149.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 149. Myself'
+title: 'The Related Discourses | 1. The Aggregates | 149 (37). I Myself'
 type: kramdown
 base: ../../../
 previous: SA1_148.html
@@ -9,7 +9,7 @@ next: SA1_150.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 149. Myself
+### 149 (37). I Myself
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
@@ -20,17 +20,19 @@ next: SA1_150.html
 3\. “Monks, form is impermanent, painful, and liable to change. The world’s sages say, ‘That exists,’ and I also say, ‘That exists.’ Thus, feeling … conception … volition … consciousness is impermanent, painful, and liable to change. The world’s sages say, ‘That exists,’ and I also say, ‘That exists.’
 {:#p3}
 
-4\. “The world’s sages say, ‘That doesn’t exist,’ and I also say, ‘That doesn’t exist.’ That is, ‘Form is permanent, eternal, unchanging, and a correct abode.’ The world’s sages say, ‘That doesn’t exist,’ and I say, ‘That doesn’t exist.’ ‘Feeling … conception … volition … consciousness is permanent, eternal, unchanging, and a correct abode.’ The world’s sages say, ‘That doesn’t exist,’ and I say, ‘That doesn’t exist.’ This is called the worldly sages saying, ‘That doesn’t exist,’ and myself also saying, ‘That doesn’t exist.’
+4\. “The world’s sages say, ‘That doesn’t exist,’ and I also say, ‘That doesn’t exist.’ That is, ‘Form is permanent, eternal, unchanging, and a correct abode.’ The world’s sages say, ‘That doesn’t exist,’ and I say, ‘That doesn’t exist.’ ‘Feeling … conception … volition … consciousness is permanent, eternal, unchanging, and a correct abode.’ The world’s sages say, ‘That doesn’t exist,’ and I say, ‘That doesn’t exist.’ This is called the worldly sages saying, ‘That doesn’t exist,’ and I myself saying, ‘That doesn’t exist.’
 {:#p4}
 
-5\. “Monks, there is a mundane rule of the world that I myself also know and realize, and I discern, explain, and demonstrate it for people. The world is blind, without eyes, and doesn’t know or see it, but it’s not me who is mistaken.
+5\. “Monks, there is a mundane rule of the world that I also know and realize, and I discern, explain, and demonstrate it for people. The world is blind, without eyes, and doesn’t know or see it, but it’s not me who is mistaken.
 {:#p5}
 
-6\. “Monks, what is the mundane rule of the world that I myself know and realize [8c] and that I explain, discern, and demonstrate for people who are blind, without eyes, and don’t know or see it? Monks, form is impermanent, painful, and liable to change. This is called the mundane rule of the world. Thus, feeling … conception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane rule of the world. Monks, this is the mundane rule of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Those who are blind and without eyes don’t know or see it. How am I like those who are blind, without eyes, and don’t know or see it?”
+6\. “Monks, what is the mundane rule of the world that I myself know and realize and that I explain, discern, and demonstrate for people who are blind, without eyes, and don’t know or see it? Monks, form is impermanent, painful, and liable to change. This is called the mundane rule of the world. Thus, feeling … conception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane rule of the world. Monks, this is the mundane rule of the world that I know and realize and that I discern, explain, and demonstrate for people. Those who are blind and without eyes don’t know or see it. How am I like those who are blind, without eyes, and don’t know or see it?”
 {:#p6}
 
 7\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p7}
+
+---
 
 ### Notes
 
@@ -40,7 +42,7 @@ next: SA1_150.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
