--- a/01_agama/samyukta/01/SA1_15.md
+++ b/01_agama/samyukta/01/SA1_15.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 15. Teaching Disillusionment'
+title: 'The Related Discourses | 1. The Aggregates | 15 (9). Disillusionment'
 type: kramdown
 base: ../../../
 previous: SA1_14.html
@@ -9,28 +9,31 @@ next: SA1_16.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 15. Teaching Disillusionment
+### 15 (9). Disillusionment
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self, either. Such observation is called a true and correct observation. Thus, feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self, either. Such an observation is called a true and correct observation.
+2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self, either. Such observation is called true and correct observation. Thus, feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self, either. Such an observation is called a true and correct observation.
 {:#p2}
 
-3\. “Noble disciples who thus observe become disillusioned with form. They become disillusioned with sensation … conception … volition … consciousness. Because they’re disillusioned, they don’t enjoy them. Because they don’t enjoy them, they attain liberation. For someone who’s liberated, this true knowledge arises: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+3\. “Noble disciples who thus observe form become disillusioned with it. They become disillusioned with feeling … conception … volition … consciousness. Because they’re disillusioned, they don’t enjoy them. Because they don’t enjoy them, they attain liberation. For someone who’s liberated, this true knowledge arises: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
-1. {:#n1} This sūtra is parallel with [SN 22.15](https://suttacentral.net/sn22.15){:target="_blank"} and similar to [SN 22.16](https://suttacentral.net/sn22.16){:target="_blank"}-[17](https://suttacentral.net/sn22.17){:target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is parallel with [SN 22.15](https://suttacentral.net/sn22.15){:target="_blank"} and similar to [SN 22.16](https://suttacentral.net/sn22.16){:target="_blank"} and [17](https://suttacentral.net/sn22.17){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
