--- a/01_agama/samyukta/01/SA1_152.md
+++ b/01_agama/samyukta/01/SA1_152.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 152. Involvement'
+title: 'The Related Discourses | 1. The Aggregates | 152 (40). Involvement'
 type: kramdown
 base: ../../../
 previous: SA1_151.html
@@ -9,29 +9,44 @@ next: SA1_153.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 152. Involvement
+### 152 (40). Involvement
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Someone involved isn’t liberated, but when they aren’t involved, then they are liberated. How is someone involved not liberated? Monks, consciousness abides in its substrates of four acquired aggregates. What are the four? Consciousness abides involved with form. Consciousness abides involved with feeling … conception … volition… *as in SĀ 1.151.5* … because it’s something that’s impossible. This is called someone not being liberated because they are involved.
+2\. It was then that the Bhagavān addressed the monks, “Someone involved isn’t liberated, but when they aren’t involved, then they are liberated. How is someone involved not liberated? Monks, consciousness abides in its substrates of four acquired aggregates. What are the four? Consciousness abides involved with form. Consciousness abides involved with feeling … conception … volition [as its substrate. Soaked with greed and delight, it grows and expands. Monks, consciousness (abides) in them, whether it’s abiding, disappearing, or growing and expanding in the future or past.] [\[2\]](#n2){:#ref2}
 {:#p2}
 
-3\. “How is someone who isn’t involved then liberated? Parting with greed for the element of form and parting with greed for the element of feeling … conception … volition … *as in SĀ 1.151.7-9* … quenched in truth. This is someone being liberated because they are not involved.”
+3\. [“Monks, suppose consciousness exists apart from form, feeling, conception, and volition, whether it’s abiding or arising in the future or past. It would exist only as an assertion. Asking that question while not knowing this will increase someone’s delusion] because it’s something that’s unsupported. This is called someone not being liberated because they are involved.
 {:#p3}
 
-4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
+4\. [“How is someone who isn’t involved then liberated? Parting with greed for the element of form, [their mental involvement with form that produces bondage is ended. After that, the substrate (of form) is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.]
 {:#p4}
+
+5\. “Parting with greed for the element of feeling … conception … volition, [their mental involvement with volition that produces bondage is ended. After that, the substrate (of volition) is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.]
+{:#p5}
+
+6\. [“Because it doesn’t grow, volitions aren’t created. Once volitions aren’t created, then one abides. Once one is abiding, they are satisfied. Once they’re satisfied, they’re liberated. Once they’re liberated, they grasp nothing and attach to nothing in all the world. Once they grasp nothing and attach to nothing, they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’]
+{:#p6}
+
+7\. [“I say that that consciousness doesn’t go east, west, south, north, to the four counterpoints, up, or down. There’s no destination to which it goes. When it’s about to enter nirvāṇa, it’s truly ceased, quenched, and] purified in the present life. This is someone being liberated because they are not involved.”
+{:#p7}
+
+8\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
+{:#p8}
+
+---
 
 ### Notes
 
-1. {:#n1} This sūtra is similar to [SĀ 1.151](SA1_151.html){:target="_blank"} and [SN 22.43](https://suttacentral.net/sn22.43){:target="_blank"} but simpler and with less emphasis on involvement. [\[back\]](#ref1)
+1. {:#n1} This sūtra is similar to [SĀ 1.151](SA1_151.html){:target="_blank"} and [SN 22.53](https://suttacentral.net/sn22.53){:target="_blank"} but simpler and with less emphasis on involvement. [\[back\]](#ref1)
+2. {:#n2} The passages in brackets were abbreviated in the original Chinese. I’ve expanded the abbreviations with the corresponding passages from the previous sūtra, SĀ 1.151. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
