--- a/01_agama/samyukta/01/SA1_153.md
+++ b/01_agama/samyukta/01/SA1_153.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 153. Five Turns'
+title: 'The Related Discourses | 1. The Aggregates | 153 (41). Five Turns'
 type: kramdown
 base: ../../../
 previous: SA1_152.html
@@ -9,17 +9,17 @@ next: SA1_158.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 153. Five Turns
+### 153 (41). Five Turns
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates: The acquired aggregate of form … feeling … conception … volition, and acquired aggregate of consciousness. I truly know these five acquired aggregates in five ways: Truly knowing form … form’s formation … form’s enjoyment … form’s trouble, and truly knowing form’s escape. Thus, I truly know feeling … conception … volition … consciousness … consciousness’s formation … consciousness’s enjoyment … consciousness’s trouble, and truly know consciousness’s escape.
+2\. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates: The acquired aggregate of form … feeling … conception … volition … the acquired aggregate of consciousness. I truly know these five acquired aggregates in five ways: I truly know form … form’s formation … form’s enjoyment … form’s trouble … truly know form’s escape. Thus, I truly know feeling … conception … volition … consciousness … consciousness’s formation … consciousness’s enjoyment … consciousness’s trouble … truly know consciousness’s escape.
 {:#p2}
 
 #### Form
 
-3\. “How is form truly known? All forms that exist, all the four elements and forms made of the four elements are called form. Form is thus truly known.
+3\. “How is form truly known? All forms that exist, all four elements and forms made of the four elements, are called form. Form is thus truly known.
 {:#p3}
 
 4\. “How is form’s formation truly known? Delight and craving for form are called form’s formation. Form’s formation is thus truly known.
@@ -36,7 +36,7 @@ next: SA1_158.html
 
 #### Feeling
 
-8\. “How is feeling truly known? There is the body of six feelings: Feeling that arises from eye contact … ear … nose … tongue … body, and feeling that arises from mind contact. This is called feeling. Feeling is thus truly known.
+8\. “How is feeling truly known? There is the body of six feelings: Feeling that arises from eye contact … ear … nose … tongue … body … feeling that arises from mind contact. This is called feeling. Feeling is thus truly known.
 {:#p8}
 
 9\. “How is feeling’s formation truly known? The formation of contact is feeling’s formation. Feeling’s formation is thus truly known.
@@ -53,7 +53,7 @@ next: SA1_158.html
 
 #### Conception
 
-13\. “How is conception truly known? There’s the body of six conceptions. What are the six? They are conception that arises from eye contact … ear … nose … tongue … body, and conception that arises from mind contact. This is called conception. conception is thus truly known.
+13\. “How is conception truly known? There’s the body of six conceptions. What are the six? They are conception that arises from eye contact … ear … nose … tongue … body … conception that arises from mind contact. This is called conception. Conception is thus truly known.
 {:#p13}
 
 14\. “How is conception’s formation truly known? The formation of contact is conception’s formation. Conception’s formation is thus truly known.
@@ -87,7 +87,7 @@ next: SA1_158.html
 
 #### Consciousness
 
-23\. “How is consciousness truly known? There’s the body of six consciousnesses: The body of visual consciousness … auditory … olfactory … gustatory … somatic, and the body of mental consciousness. This is called the body of consciousness. The body of consciousness is thus truly known.
+23\. “How is consciousness truly known? There’s the six bodies of consciousnesses: The body of eye consciousness … ear … nose … tongue … body … the body of mind consciousness. This is called the bodies of consciousness. The bodies of consciousness are thus truly known.
 {:#p23}
 
 24\. “How is consciousness’s formation truly known? The formation of name and form is called consciousness’s formation. Consciousness’s formation is thus truly known.
@@ -102,14 +102,16 @@ next: SA1_158.html
 27\. “How is consciousness’s escape truly known? When desire for consciousness is controlled, stopped, and transcended, this is called consciousness’s escape. Consciousness’s escape is thus truly known.
 {:#p27}
 
-28\. “Monks, if an ascetic or priest thus knows and sees form and thus knows and sees the way to part with desire for it, this is called the correct heading. If someone is correctly headed, I say that they have entered. Feeling, conception, volition, and consciousness are likewise.
+28\. “Monks, if an ascetic or priest knows and sees form in this way and knows and sees the way to part with desire for it in this way, this is called the correct heading. If someone is correctly headed, I say that they have entered. *Feeling, conception, volition, and consciousness are likewise.*
 {:#p28}
 
-29\. “If an ascetic or priest truly knows and sees form, then disenchantment with form arises. Parting with desire for it, they don’t produce contaminants, and the mind becomes liberated. If someone’s mind becomes liberated, then it’s consistent. It being consistent, the religious life is established. Someone established in the religious life is free of other’s control. This is called the end of suffering. Feeling, conception, volition, and consciousness is likewise.”
+29\. “If an ascetic or priest truly knows and sees form, then disillusionment with form arises. Parting with desire for it, they don’t produce contaminants, and the mind becomes liberated. If someone’s mind becomes liberated, then it’s consistent. It being consistent, the religious life is established. Someone established in the religious life is free of another’s control. This is called the end of suffering. *Feeling, conception, volition, and consciousness is likewise.*”
 {:#p29}
 
 30\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p30}
+
+---
 
 ### Notes
 
@@ -119,7 +121,7 @@ next: SA1_158.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
