--- a/01_agama/samyukta/01/SA1_17.md
+++ b/01_agama/samyukta/01/SA1_17.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 17. Cause and Condition'
+title: 'The Related Discourses | 1. The Aggregates | 17 (11). Causes and Conditions'
 type: kramdown
 base: ../../../
 previous: SA1_16.html
@@ -9,7 +9,7 @@ next: SA1_18.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 17. Cause and Condition
+### 17 (11). Causes and Conditions
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
@@ -17,23 +17,26 @@ next: SA1_18.html
 2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes and conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Thus, feeling … conception … volition … consciousness is impermanent. Whatever causes and conditions give rise to consciousnesses, they are also impermanent. How could consciousnesses that arise from impermanent causes and conditions be permanent?
 {:#p2}
 
-3\. “Thus, monks, form is impermanent, and feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self.
+3\. “Thus, monks, form is impermanent … Feeling … Conception … Volition … Consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self.
 {:#p3}
 
-4\. “Noble disciples who thus observe become disillusioned with form, and they become disillusioned with feeling … conception … volition … consciousness. Being disillusioned, they don’t enjoy [them]. Not enjoying them, [2b] they are liberated. Being liberated, they know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “Noble disciples who thus observe it become disillusioned with form … become disillusioned with feeling … conception … volition … consciousness. Being disillusioned, they don’t enjoy it. Not enjoying it, they are liberated. Being liberated, they know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
-5\. When the monks who heard what the Buddha taught, they rejoiced and approved.
+5\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p5}
 
+---
+
 ### Notes
-1. {:#n1} This sūtra is parallel with [SN 22.18](https://suttacentral.net/sn22.18){:target="_blank"} and similar to [SN 22.19](https://suttacentral.net/sn22.19){:target="_blank"}-[20](https://suttacentral.net/sn22.20){:target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is parallel with [SN 22.18](https://suttacentral.net/sn22.18){:target="_blank"} and similar to [SN 22.19](https://suttacentral.net/sn22.19){:target="_blank"} and [20](https://suttacentral.net/sn22.20){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
