--- a/01_agama/samyukta/01/SA1_21.md
+++ b/01_agama/samyukta/01/SA1_21.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 21. Tendencies'
+title: 'The Related Discourses | 1. The Aggregates | 21 (15). Tendencies'
 type: kramdown
 base: ../../../
 previous: SA1_20.html
@@ -9,12 +9,12 @@ next: SA1_22.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 21. Tendencies
+### 21 (15). Tendencies
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. At the time, a certain monk went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to stand to one side. He said, “It’d be excellent, Bhagavān, if you would briefly explain the teaching for me now. After hearing the teaching, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘It’s because a good man leaves home, shaves his hair, puts on the Dharma robes, and becomes faithful, homeless, and leaves home to train on the path that the ultimate and unsurpassed religious life realizes in the present: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+2\. At the time, a certain monk went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to stand to one side. He said, “It’d be excellent, Bhagavān, if you would briefly explain the teaching for me now. After hearing the teaching, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘Because a good man leaves home, shaves his hair, puts on the Dharma robes, becomes faithful, goes homeless, and leaves home to train on the path of the ultimate and unsurpassed religious life, he realizes in the present: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p2}
 
 3\. The Bhagavān told that monk, “Good, monk! Good! You’ve expressed yourself gladly, saying, ‘Would you briefly explain the teaching for me now? After I’ve heard the teaching, I’ll go alone to a quiet place and cultivate it earnestly … “I myself know that I won’t be subject to a later existence.”’ Is this what you’ve asked?”
@@ -22,7 +22,7 @@ next: SA1_22.html
 
 The monk said to the Buddha, “So it is, Bhagavān.”
 
-4\. The Buddha told the monk, “Listen closely, listen closely! Well consider it, for I will explain this for you. Monk, if someone follows the tendencies, then they will follow death.[\[2\]](#n2){:#ref2} If someone follows death, then they’re bound by grasping. Monk, if someone doesn’t follow the tendencies, then they won’t follow death. Not following death, they are freed from grasping.”
+4\. The Buddha told the monk, “Listen closely! Listen closely, and consider it well, for I will explain this for you. Monk, if someone follows the tendencies, then they will follow death.[\[2\]](#n2){:#ref2} If someone follows death, then they’re bound by grasping. Monk, if someone doesn’t follow the tendencies, then they won’t follow death. Not following death, they are freed from grasping.”
 {:#p4}
 
 The monk said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”
@@ -30,10 +30,10 @@ The monk said to the Buddha, “I’ve understood, Bhagavān! I’ve understood,
 5\. The Buddha asked the monk, “How do you understand in detail the meaning of my brief explanation of the teaching?”
 {:#p5}
 
-6\. The monk said to the Buddha, “Bhagavān, form follows the tendencies, and form follows death. Someone who follows the tendencies and follows death is bound by grasping. Thus, feeling … conception … volition … consciousness follows the tendencies, and it follows death. Someone who follows the tendencies and follows death is bound by grasping.
+6\. The monk said to the Buddha, “Bhagavān, form follows the tendencies, and form follows death. Someone who follows the tendencies and follows death is bound by grasping. Thus, feeling … conception … volition … consciousness follows the tendencies, and consciousness follows death. Someone who follows the tendencies and follows death is bound by grasping.
 {:#p6}
 
-7\. “Bhagavān, when form doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping. Thus, if feeling … conception … volition … consciousness doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping.
+7\. “Bhagavān, when form doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping. Thus, if feeling … conception … volition … consciousness doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping.”
 {:#p7}
 
 8\. The Buddha told the monk, “Good, good! That’s a detailed understanding of the meaning of my brief explanation. Why is that? When form follows the tendencies, it follows death. Someone who follows the tendencies and follows death is bound by grasping. Thus, when feeling … conception … volition … consciousness follows the tendencies, it follows death. Someone who follows the tendencies and follows death is bound by grasping.
@@ -42,21 +42,24 @@ The monk said to the Buddha, “I’ve understood, Bhagavān! I’ve understood,
 9\. “Monk, when form doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping. Thus, when feeling … conception … volition … consciousness doesn’t follow the tendencies, it doesn’t follow death. Someone who doesn’t follow the tendencies and doesn’t follow death is freed from grasping.”
 {:#p9}
 
-10\. When that monk heard what the Buddha taught, his felt great joy. He bowed to the Buddha and withdrew. He stayed alone in a quiet place, diligently trained, and lived earnestly. After diligently training and living earnestly, he contemplated this: “It’s because a good man leaves home, shaves his hair, puts on the Dharma robes, and becomes faithful, homeless, and leaves home … ‘I myself know that I won’t be subject to a later existence.’”
+10\. When that monk heard what the Buddha taught, he felt great joy. He bowed to the Buddha and withdrew. He stayed alone in a quiet place, diligently trained, and lived earnestly. After diligently training and living earnestly, he contemplated this: “Because a good man leaves home, shaves his hair, puts on the Dharma robes, becomes faithful, goes homeless, and leaves home … ‘I myself know that I won’t be subject to a later existence.’”
 {:#p10}
 
 11\. When that monk became an arhat, his mind was liberated.
 {:#p11}
 
+---
+
 ### Notes
+
 1. {:#n1} This sūtra is parallel with [SN 22.35-36](https://suttacentral.net/sn22.35){:target="_blank"} and similar to [SN 22.63-65](https://suttacentral.net/sn22.63){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *follows the tendencies … follows death*. Ch. 隨使使…隨使死. The exact meaning of 隨使 is unclear and appears to be an invention by the Chinese translator (or perhaps 隨使 should instead be 隨 or 隨順). I’ve translated it conservatively as “follow,” but I believe it may mean “to serve.” On the reading of the Pali equivalent to 隨使死 (anumīyati) found in SN 22.36, see Bodhi’s note 49, p.1053-4, *Connected Discourses*, Vol. I. He says Spk reads the term as equivalent to Skt. anumṛyate ("dies along with"), which would agree with the Chinese. [\[back\]](#ref2)
+2. {:#n2} *follows the tendencies … follows death*. Ch. 隨使使…隨使死. The exact meaning of 隨使 is unclear and appears to be an invention by the Chinese translator (or perhaps 隨使 should be emended to 隨 or 隨順). I’ve translated it conservatively as “follow,” but I believe it may mean “to serve.” On the reading of the Pali equivalent to 隨使死 (anumīyati) found in [SN 22.36](https://suttacentral.net/sn22.36){:target="_blank"}, see Bodhi’s note 49 on p.1053-4 of *Connected Discourses*, Vol. I. He says Spk reads the term as equivalent to Skt. anumṛyate ("dies along with"), which would agree with the Chinese. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
