--- a/01_agama/samyukta/01/SA1_22.md
+++ b/01_agama/samyukta/01/SA1_22.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 22. Proliferation'
+title: 'The Related Discourses | 1. The Aggregates | 22 (16). Proliferation'
 type: kramdown
 base: ../../../
 previous: SA1_21.html
@@ -9,42 +9,57 @@ next: SA1_42.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 22. Proliferation
+### 22 (16). Proliferation
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that a certain monk came to the Buddha … *and asked the same question as in [SĀ 1.21](SA1_21.html).*
+2\. It was then that a certain monk went to the Buddha, [bowed his head at the Buddha’s feet, and withdrew to stand to one side. He said, “It’d be excellent, Bhagavān, if you would briefly explain the teaching for me now. After hearing the teaching, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘Because a good man leaves home, shaves his hair, puts on the Dharma robes, becomes faithful, goes homeless, and leaves home to train on the path of the ultimate and unsurpassed religious life, he realizes in the present: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”] [\[2\]](#n2){:#ref2}
 {:#p2}
 
-…
-
-*The Buddha’s teaching was different*: “When someone follows the tendencies and follows death, then then increase in number. When someone doesn’t follow the tendencies and doesn’t follow death, then they don’t increase in number.”
-
-…
-
-3\. The Buddha told the monk, “How do you understand in detail the meaning of my brief explanation of the teaching?”
+3\. [The Bhagavān told that monk, “Good, monk! Good! You’ve expressed yourself gladly, saying, ‘Would you briefly explain the teaching for me now? After I’ve heard the teaching, I’ll go alone to a quiet place and cultivate it earnestly … “I myself know that I won’t be subject to a later existence.”’ Is this what you’ve asked?”]
 {:#p3}
 
-4\. That monk then said to the Buddha, “Bhagavān, suppose form follows the tendencies and follows death. When it follows the tendencies and follows death, it increases in number. Thus, suppose feeling … conception … volition … consciousness follows the tendencies and follows death. When it follows the tendencies and follows death, it increases in number.
+[The monk said to the Buddha, “So it is, Bhagavān.”]
+
+4\. [The Buddha told the monk, “Listen closely! Listen closely, and consider it well, for I will explain this for you. Monk,] when someone follows the tendencies and follows death, then they increase in number. When someone doesn’t follow the tendencies and doesn’t follow death, then they don’t increase in number.”
 {:#p4}
 
-5\. “Bhagavān, suppose form doesn’t follow the tendencies and doesn’t follow death. When it doesn’t follow the tendencies and doesn’t follow death, it doesn’t increase in number. Thus, suppose feeling … conception … volition … consciousness doesn’t follow the tendencies and doesn’t follow death. When it doesn’t follow the tendencies and doesn’t follow death, it doesn’t increase in number. Thus, Bhagavān, is my understanding in detail of this brief explanation of the teaching.”
+[The monk said to the Buddha, “I’ve understood, Bhagavān! I’ve understood, Sugata!”]
+
+5\. The Buddha told the monk, “How do you understand in detail the meaning of my brief explanation of the teaching?”
 {:#p5}
 
-…
-
-6\. When that monk became an arhat, his mind was liberated.
+6\. That monk then said to the Buddha, “Bhagavān, suppose form follows the tendencies and follows death. When it follows the tendencies and follows death, it increases in number. Thus, suppose feeling … conception … volition … consciousness follows the tendencies and follows death. When it follows the tendencies and follows death, it increases in number.
 {:#p6}
 
+7\. “Bhagavān, suppose form doesn’t follow the tendencies and doesn’t follow death. When it doesn’t follow the tendencies and doesn’t follow death, it doesn’t increase in number. Thus, suppose feeling … conception … volition … consciousness doesn’t follow the tendencies and doesn’t follow death. When it doesn’t follow the tendencies and doesn’t follow death, it doesn’t increase in number. Thus, Bhagavān, is my understanding in detail of this brief explanation of the teaching.”
+{:#p7}
+
+8\. [The Buddha told the monk, “Good, good! That’s a detailed understanding of the meaning of my brief explanation. Why is that? When form follows the tendencies and follows death, it increases in number. Thus, when feeling … conception … volition … consciousness follows the tendencies and follows death, it increases in number.]
+{:#p8}
+
+9\. [“When form doesn’t follow the tendencies and doesn’t follow death, it doesn’t increase in number. Thus, when feeling … conception … volition … consciousness doesn’t follow the tendencies and doesn’t follow death, it doesn’t increase in number.”]
+{:#p9}
+
+10\. [When that monk heard what the Buddha taught, he felt great joy. He bowed to the Buddha and withdrew. He stayed alone in a quiet place, diligently trained, and lived earnestly. After diligently training and living earnestly, he contemplated this: “Because a good man leaves home, shaves his hair, puts on the Dharma robes, becomes faithful, goes homeless, and leaves home … ‘I myself know that I won’t be subject to a later existence.’”]
+{:#p10}
+
+11\. [When that monk] became an arhat, his mind was liberated.
+{:#p11}
+
+---
+
 ### Notes
+
 1. {:#n1} This sūtra is parallel with [SN 22.35-36](https://suttacentral.net/sn22.35){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} Large parts of this sūtra that were identical to SĀ 1.21 are omitted in the Chinese. The passages in brackets have been reconstituted following the Chinese translator’s abbreviation notes. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
