--- a/01_agama/samyukta/01/SA1_42.md
+++ b/01_agama/samyukta/01/SA1_42.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 42. Direct Realization'
+title: 'The Related Discourses | 1. The Aggregates | 42 (259). Direct Realization'
 type: kramdown
 base: ../../../
 previous: SA1_22.html
@@ -9,7 +9,7 @@ next: SA1_138.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 17. Cause and Condition
+### 42 (259). Direct Realization
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the Kalandaka’s Bamboo Park of Rājagṛha. At the time, the Venerable Śāriputra and Mahākauṣṭhila was present on Mount Gṛdhrakūṭa.
 {:#p1}
@@ -22,27 +22,27 @@ next: SA1_138.html
 
 Śāriputra said, “Sir, you may ask. I’ll answer with that I know.”
 
-4\. Mahākauṣṭhila then asked Śāriputra, “If a monk who has yet to attain direct realization wishes to pursue it, what method does he pursue? What teaching does he contemplate?”
+4\. Mahākauṣṭhila then asked Śāriputra, “If a monk who has yet to attain direct realization wishes to pursue it, what method does he use? What teaching does he contemplate?”
 {:#p4}
 
 Śāriputra replied, “If a monk who has yet to attain direct realization wants to pursue it, he diligently contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates the five acquired aggregates, he’ll realize the fruit of stream entry.”
 
-5\. Mahākauṣṭhila also asked, “Śāriputra, suppose someone wants to realize the fruit of once-returning after realizing the fruit of stream entry. What teaching should they contemplate?”
+5\. Mahākauṣṭhila also asked, “Śāriputra, suppose he wants to realize the fruit of once-returning after realizing the fruit of stream entry. What teaching should he contemplate?”
 {:#p5}
 
-Śāriputra replied, “Kauṣṭhila, someone who wants to realize the fruit of once-returning after realizing the fruit of stream entry should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for their situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of once-returning.”
+Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of once-returning after realizing the fruit of stream entry should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of once-returning.”
 
-6\. Mahākauṣṭhila also asked Śāriputra, “Suppose someone wants to realize the fruit of non-returning after realizing the fruit of once-returning. What teaching should they contemplate?”
+6\. Mahākauṣṭhila also asked Śāriputra, “Suppose he wants to realize the fruit of non-returning after realizing the fruit of once-returning. What teaching should he contemplate?”
 {:#p6}
 
-Śāriputra replied, “Kauṣṭhila, someone who wants to realize the fruit of non-returning after realizing the fruit of once-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for their situation. If a monk diligently contemplates [65c] these five acquired aggregates, he’ll realize the fruit of non-returning.”
+Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of non-returning after realizing the fruit of once-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of non-returning.”
 
-7\. Mahākauṣṭhila also asked Śāriputra, “Suppose someone wants to realize the fruit of the arhat after realizing the fruit of non-returning. What teaching should they contemplate?”
+7\. Mahākauṣṭhila also asked Śāriputra, “Suppose he wants to realize the fruit of the arhat after realizing the fruit of non-returning. What teaching should he contemplate?”
 {:#p7}
 
-Śāriputra replied, “Kauṣṭhila, someone who wants to realize the fruit of the arhat after realizing the fruit of non-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for their situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of the arhat.”
+Śāriputra replied, “Kauṣṭhila, [a monk] who wants to realize the fruit of the arhat after realizing the fruit of non-returning should also diligently contemplate this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because it’s appropriate for his situation. If a monk diligently contemplates these five acquired aggregates, he’ll realize the fruit of the arhat.”
 
-8\. Mahākauṣṭhila also asked Śāriputra, “What teaching do they contemplate after attaining the fruit of the arhat?”
+8\. Mahākauṣṭhila also asked Śāriputra, “What teaching does he contemplate after attaining the fruit of the arhat?”
 {:#p8}
 
 Śāriputra replied, “Mahākauṣṭhila, an arhat also contemplates this: ‘The five acquired aggregates are like illnesses, abscesses, thorns, and killers. They are impermanent, painful, empty, and not self.’ Why is that? Because he has attained what was yet to be attained, realized what was yet to be realized, and sees the teaching’s abode of happiness.”
@@ -50,14 +50,17 @@ next: SA1_138.html
 9\. When those two upright men each heard what was taught, they rejoiced and departed.
 {:#p9}
 
+---
+
 ### Notes
+
 1. {:#n1} This sūtra is parallel with [SN 22.122](https://suttacentral.net/sn22.122){:target="_blank"}-[123](https://suttacentral.net/sn22.123){:target="_blank"} and EĀ 34.1. Note that the EĀ version matches the Pali in that “direct realization” isn’t mentioned. Instead, the initial question is about an “ethical” monk. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 April 2021
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
