--- a/01_agama/samyukta/01/SA1_6.md
+++ b/01_agama/samyukta/01/SA1_6.md
@@ -17,20 +17,23 @@ next: SA1_7.html
 2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t stop or become free of desire for it, it’s not possible to stop suffering. Thus, when one doesn’t know or understand feeling … conception … volition … consciousness and doesn’t stop or become free of desire for it, it’s not possible to stop suffering.
 {:#p2}
 
-3\. “Monks, if someone knows and understands form and stops and becomes free of desire for it, it’s possible to stop suffering. Thus, if someone knows and understands feeling … conception … volition … consciousness and stops and becomes free of desire for it, it’s possible to end suffering.”
+3\. “Monks, if someone knows and understands form and stops and becomes free of desire for it, it’s possible to stop suffering. Thus, if someone knows and understands feeling … conception … volition … consciousness and stops and becomes free of desire for it, it’s possible to stop suffering.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
+
 1. {:#n1} This sūtra is parallel with [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and [SĀ 2.6](../02/sa2_6.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
