--- a/01_agama/samyukta/01/SA1_138.md
+++ b/01_agama/samyukta/01/SA1_138.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 138. Pūraṇa'
+title: 'The Related Discourses | 1. The Aggregates | 138 (81). Pūraṇa'
 type: kramdown
 base: ../../../
 previous: SA1_42.html
@@ -9,7 +9,7 @@ next: SA1_143.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 138. Pūraṇa
+### 138 (81). Pūraṇa
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the two-story meeting hall beside Markaṭa Lake of Vaiśālī.
 {:#p1}
@@ -17,62 +17,64 @@ next: SA1_143.html
 2\. It was then that there was a Licchavi named Mahānāma[\[2\]](#n2){:#ref2} who traveled daily to visit the Buddha.
 {:#p2}
 
-3\. That Licchavi man thought to himself, ‘If I visit the Bhagavān in the morning, both the Bhagavān and the monks who are my friends will all be meditating. I’ll go visit the ājīvika heretics at Seven Mango Trees.” He then went to visit Pūraṇa Kāśyapa at his residence.
+3\. That Licchavi man thought to himself, ‘If I visit the Bhagavān in the morning, the Bhagavān and the monks who are my friends will all be meditating. I’ll go visit the ājīvika heretics at Seven Mango Trees.” He then went to visit Pūraṇa Kāśyapa at his residence.
 {:#p3}
 
 4\. Pūraṇa Kāśyapa was the leader of an assembly of another tradition. He was surrounded front and back by five hundred disciples who were loud and boisterous as they discussed ordinary affairs.
 {:#p4}
 
-5\. When he saw the Licchavi Mahānāma coming from a distance, Pūraṇa Kāśyapa told his followers to settle down: “Quiet, all of you! This Licchavi Mahānāma is a disciple of the ascetic Gautama. This white-robed disciple of the ascetic Gautama is a high-ranking person in Vaiśālī. He always delights in peacefulness, praises peacefulness, and visits peaceful assemblies; therefore, all of you must be peaceful.”
+5\. When he saw the Licchavi Mahānāma coming from a distance, Pūraṇa Kāśyapa told his followers to settle down: “Quiet, all of you! This Licchavi Mahānāma is a disciple of the ascetic Gautama. This white-robed disciple of the ascetic Gautama is a high-ranking person in Vaiśālī. He always delights in peace, praises peace, and visits peaceful assemblies; therefore, all of you must be peaceful.”
 {:#p5}
 
-6\. Mahānāma then paid a visit to Pūraṇa’s assembly, and he exchanged greetings with Pūraṇa. After listening to his troubles, Mahānāma withdrew to sit at one side.
+6\. Mahānāma then paid a visit to Pūraṇa’s assembly, and he exchanged greetings with him. After listening to his troubles, Mahānāma withdrew to sit at one side.
 {:#p6}
 
-7\. Mahānāma said to Pūraṇa, “I’ve heard that Pūraṇa teaches his disciples this: ‘There’s no cause or condition by which sentient beings are defiled, and there’s no cause or condition by which sentient beings are purified.’ The world has these theories. Has it been put forward by you, or are these words used by those of other traditions to slander you? In the judgement of worldly people, is this Dharma or what’s not Dharma? Haven’t there been worldly people who’ve discussed it with you, questioned it critically, and rejected it?”
+7\. Mahānāma said to Pūraṇa, “I’ve heard that Pūraṇa teaches his disciples this: ‘There’s no cause or condition for sentient beings to be defiled and no cause or condition for sentient beings to be purified.’ The world has these theories. Has it been put forward by you, or are these words used by those of other traditions to slander you? In the judgement of worldly people, is this Dharma or not Dharma? Haven’t there been worldly people who’ve discussed it with you, questioned it critically, and rejected it?”
 {:#p7}
 
-Pūraṇa Kāśyapa said, “I really have this theory; it isn’t a worldly misrepresentation. I established this theory as a theory that accords with Dharma. I teach this Dharma, and they follow the Dharma. There aren’t any worldly people who come to question it critically and reject it. Why is that? Mahānāma, I thus see and thus teach, ‘There’s no cause or condition by which sentient beings are defiled, and there’s no cause or condition by which sentient beings are purified.’”
+Pūraṇa Kāśyapa said, “I really have this theory; it isn’t a worldly misrepresentation. I established this theory as a theory that accords with Dharma. I teach this Dharma, and I follow the Dharma. There aren’t any worldly people who come to question it critically and reject it. Why is that? Mahānāma, I thus see and thus teach, ‘There’s no cause or condition for sentient beings to be defiled and no cause or condition for sentient beings to be purified.’”
 
 
 8\. After he heard what Pūraṇa said, Mahānāma wasn’t delighted and felt insulted, so he got up from his seat and left. He went to the Bhagavān, bowed his head at his feet, and withdrew to sit to one side. He then recounted his conversation with Pūraṇa to the Buddha in detail.
 {:#p8}
 
-9\. The Buddha told the Licchavi Mahānāma, “That Pūraṇa speaks from intellect, which isn’t enough to decide [the matter]. Thus, Pūraṇa is foolish, undiscerning, and unskillful. He has no cause to say, ‘There’s no cause or condition by which sentient beings are defiled, and there’s no cause or condition by which sentient beings are purified.’ Why is that? There are causes and conditions by which sentient beings are defiled, and there are causes and conditions by which sentient beings are purified.
+9\. The Buddha told the Licchavi Mahānāma, “That Pūraṇa speaks from intellect, which isn’t enough to decide the matter. Thus, Pūraṇa is foolish, undiscerning, and unskillful. He has no cause to say, ‘There’s no cause or condition for sentient beings to be defiled and no cause or condition for sentient beings to be purified.’ Why is that? There are causes and conditions for sentient beings to be defiled, and there are causes and conditions for sentient beings to be purified.
 {:#p9}
 
-10\. “Mahānāma, by what causes and conditions are sentient beings defiled, and by what causes and conditions are sentient beings purified? Mahānāma, if form were solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and was free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, form isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to form. They are bound to it because of that defiled attachment, and they’re vexed because of that bondage.
+10\. “Mahānāma, what are the causes and conditions for sentient beings to be defiled, and what are the causes and conditions for sentient beings to be purified? Mahānāma, if form were solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and was free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, form isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to form. They are bound to it because of that defiled attachment, and they’re troubled by that bondage.
 {:#p10}
 
-11\. “Mahānāma, if feeling … conception … volition … consciousness was solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, consciousness isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to consciousness. They are bound to it because of that defiled attachment, and they’re vexed because of that bondage. Mahānāma, this is called the causes and conditions by which sentient beings are defiled.
+11\. “Mahānāma, if feeling … conception … volition … consciousness was solely painful, not pleasant, not pleasing, didn’t nurture pleasure, and was free of pleasure, sentient beings wouldn’t become attached to pleasure as a result. Mahānāma, consciousness isn’t solely painful. It’s pleasant, pleasing, nurtures pleasure, and isn’t free of pleasure; therefore, sentient beings have defiled attachment to consciousness. They are bound to it because of that defiled attachment, and they’re troubled by that bondage. Mahānāma, these are called the causes and conditions for sentient beings to be defiled.
 {:#p11}
 
-12\. “Mahānāma, what’s the cause and condition by which sentient beings are purified? Mahānāma, if form were solely pleasant, not painful, not disagreeable, didn’t nurture pain, and free of pain, sentient beings wouldn’t become disillusioned with form as a result. Mahānāma, form isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with form. They don’t enjoy it because of that disillusionment, and they’re liberated because of not enjoying it.
+12\. “Mahānāma, what are the causes and conditions for sentient beings to be purified? Mahānāma, if form were solely pleasant, not painful, not disagreeable, didn’t nurture pain, and was free of pain, sentient beings wouldn’t become disillusioned with form as a result. Mahānāma, form isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with form. They don’t enjoy it because of that disillusionment, and they’re liberated by not enjoying it.
 {:#p12}
 
-13\. “Mahānāma, if feeling … conception … volition … consciousness was solely pleasant, not painful, not disagreeable, didn’t nurturing pain, and free of pain, sentient beings wouldn’t become disillusioned with consciousness as a result. Mahānāma, consciousness isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with consciousness. They don’t enjoy it because of that disillusionment, and they’re liberated because of not enjoying it. Mahānāma, this is called the causes and conditions by which sentient beings are purified.”
+13\. “Mahānāma, if feeling … conception … volition … consciousness was solely pleasant, not painful, not disagreeable, didn’t nurturing pain, and was free of pain, sentient beings wouldn’t become disillusioned with consciousness as a result. Mahānāma, consciousness isn’t solely pleasant. It’s painful, disagreeable, nurtures pain, and isn’t free of pain; therefore, sentient beings become disillusioned with consciousness. They don’t enjoy it because of that disillusionment, and they’re liberated by not enjoying it. Mahānāma, these are called the causes and conditions for sentient beings to be purified.”
 {:#p13}
 
 14\. When he heard what the Buddha taught, Mahānāma rejoiced and felt glad. He bowed to the Buddha and withdrew.
 {:#p14}
 
-###### Summary Verse
+#### Summary Verse
 
 * {:.verse}[126] Knowing Dharma, [127] heavy burden,\\
 [128] Opportunity, ([129] difference,) [130] examination, [131] desire,\\
 [132] Growth, [133-6] a brief teaching,\\
 [137] Dharma seal, and [138] Pūraṇa.
 
+---
+
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.60](https://suttacentral.net/sn22.60){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} Ch. 摩訶男. This is the common transliteration for the disciple Mahānāma, but this is not the same person. In SN 22.60, his name is Mahāli. [\[back\]](#ref2)
+2. {:#n2} Ch. 摩訶男. This is the common transliteration for the disciple Mahānāma, but this is not the same person. In [SN 22.60](https://suttacentral.net/sn22.60){:target="_blank"}, his name is Mahāli. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
