--- a/01_agama/samyukta/01/SA1_14.md
+++ b/01_agama/samyukta/01/SA1_14.md
@@ -14,24 +14,26 @@ next: SA1_15.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Past and future form is not self, so why wouldn’t that be for present form? Noble disciples who thus observe them don’t look back to past form or wish for future form. Regarding present form, they become disillusioned, free of desire, and properly headed for its cessation.
+2\. It was then that the Bhagavān addressed the monks, “Past and future form are not self, so why wouldn’t that be for present form? Noble disciples who thus observe them don’t look back to past form or wish for future form. Regarding present form, they become disillusioned, free of desire, and properly headed for its cessation.
 {:#p2}
 
-3\. “Thus, past and future feeling … conception … volition … consciousness is not self, so why wouldn’t that be for present feeling … conception … volition … consciousness? Noble disciples who thus observe them don’t look back to past consciousness or wish for future consciousness. Regarding present consciousness, they become disillusioned, free of desire, and properly headed for its cessation.”
+3\. “Thus, past and future feeling … conception … volition … consciousness are not self, so why wouldn’t that be for present feeling … conception … volition … consciousness? Noble disciples who thus observe them don’t look back to past consciousness or wish for future consciousness. Regarding present consciousness, they become disillusioned, free of desire, and properly headed for its cessation.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
+
 1. {:#n1} This sūtra is parallel with [SN 22.11](https://suttacentral.net/sn22.11){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
-
