--- a/01_agama/samyukta/01/SA1_143.md
+++ b/01_agama/samyukta/01/SA1_143.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 143. Impermanent'
+title: 'The Related Discourses | 1. The Aggregates | 143 (86). Impermanent'
 type: kramdown
 base: ../../../
 previous: SA1_138.html
@@ -9,12 +9,12 @@ next: SA1_145.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 143. Impermanent
+### 143 (86). Impermanent
 
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If impermanent form were permanent, that form wouldn’t have illness and pain, nor would one seek from form: ‘Let it be so; let it not be so.’ Illness and pain arise in form because it’s impermanent, and that’s why it becomes something undesired: ‘Let it be so; let it not be so.’ *Feeling, conception, volition, and consciousness are likewise.* Monks, what do you think? Is form permanent, or is it impermanent?”
+2\. It was then that the Bhagavān addressed the monks, “If impermanent form were permanent, that form wouldn’t have illness and pain, nor would one seek from form: ‘Let it be so,’ or ‘Let it not be so.’ Illness and pain arise in form because it’s impermanent, and that’s why it becomes something undesired: ‘Let it be so,’ or ‘Let it not be so.’ *Feeling, conception, volition, and consciousness are likewise.* Monks, what do you think? Is form permanent, or is it impermanent?”
 {:#p2}
 
 The monks said to the Buddha, “Impermanent, Bhagavān.”
@@ -29,10 +29,10 @@ The monks said to the Buddha, “It’s painful, Bhagavān.”
 
 The monks said to the Buddha, “No, Bhagavān.”
 
-5\. “*Feeling, conception, volition, and consciousness are likewise.* Therefore, monks, whatever forms exist, whether past, future, or present, internal or external, crude or fine, beautiful or ugly, distant or near, they are all not self and don’t belong to self when they are truly known. *Feeling, conception, volition, and consciousness are likewise.*
+5\. “*Feeling, conception, volition, and consciousness are likewise.* Therefore, monks, whatever forms exist, whether past, future, or present, internal or external, crude or fine, beautiful or ugly, distant or near, they are all not self and don’t belong to self when they’re truly known. *Feeling, conception, volition, and consciousness are likewise.*
 {:#p5}
 
-6\. “Well-versed noble disciples correctly observe form. After correctly observing it, they become disillusioned with form, part with desire, don’t enjoy it, and are liberated from it. They become disillusioned with feeling … conception … volition … consciousness, part with desire, don’t enjoy it, and are liberated from it. ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+6\. “Well-versed noble disciples correctly observe form. After correctly observing it, they become disillusioned with form, part with desire for it, don’t enjoy it, and are liberated from it. They become disillusioned with feeling … conception … volition … consciousness, part with desire for it, don’t enjoy it, and are liberated from it. ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p6}
 
 7\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -42,7 +42,7 @@ The monks said to the Buddha, “No, Bhagavān.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
