--- a/01_agama/samyukta/01/SA1_146.md
+++ b/01_agama/samyukta/01/SA1_146.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 146. Five Monks'
+title: 'The Related Discourses | 1. The Aggregates | 146 (34). Five Monks'
 type: kramdown
 base: ../../../
 previous: SA1_145.html
@@ -9,12 +9,12 @@ next: SA1_147.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 146. Five Monks
+### 146 (34). Five Monks
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Ṛṣipatana in the Deer Preserve of Bārāṇasī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the other five monks,  “Form doesn’t have self. If form had self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be the desire about form: ‘Let it be so; let it not be so.’ It’s because form is without self that there’s illness and pain that arise from form, and it’s possible to desire of form: ‘Let it be so; let it not be so.’ *Feeling, conception, volition, and consciousness are likewise.*
+2\. It was then that the Bhagavān addressed the other five monks, “Form doesn’t have self. If form had self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be these desires about form: ‘Let it be so,’ or ‘Let it not be so.’ It’s because form is without self that there’s illness and pain that arise from form, and it’s possible to desire of form: ‘Let it be so,’ or ‘Let it not be so.’ *Feeling, conception, volition, and consciousness are likewise.*
 {:#p2}
 
 3\. “Monks, what do you think? Is form permanent, or is it impermanent?”
@@ -27,15 +27,15 @@ The monks said to the Buddha, “Impermanent, Bhagavān.”
 
 The monks said to the Buddha, “It’s painful, Bhagavān.”
 
-5\. “If it’s impermanent and painful, it’s liable to change. Would a well-versed noble disciple see in it a self, what’s other than self, or either of them present in the other?”
+5\. “If it’s impermanent and painful, it’s liable to change. Would a well-versed noble disciple see it as self, other than self, or either of them present in the other?”
 {:#p5}
 
 The monks said to the Buddha, “No, Bhagavān.”
 
-6\. “*Feeling, conception, volition, and consciousness are likewise.* Therefore, monks, all forms that exist in the past, future, or present, whether they are internal or external, crude or fine, beautiful or ugly, and distant or near, they are not self and don’t belong to self when truly observed. *Feeling, conception, volition, and consciousness are likewise.*
+6\. “*Feeling, conception, volition, and consciousness are likewise.* Therefore, monks, forms that exist in the past, future, or present, whether they are internal or external, crude or fine, beautiful or ugly, or distant or near are all not self and don’t belong to self when truly observed. *Feeling, conception, volition, and consciousness are likewise.*
 {:#p6}
 
-7\. “Monks, well-versed noble disciples see that what’s in these five acquired aggregates is not self and doesn’t belong to self. Observing in this way, they grasp nothing in all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, [8a] they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+7\. “Monks, well-versed noble disciples see that what’s in these five acquired aggregates is not self and doesn’t belong to self. Observing in this way, they grasp nothing in all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p7}
 
 8\. After the Buddha spoke this sūtra, the contaminants didn’t arise in those five monks, and their minds were liberated.
@@ -44,15 +44,17 @@ The monks said to the Buddha, “No, Bhagavān.”
 9\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p9}
 
+---
+
 ### Notes
 
-1. {:#n1} This sūtra is the famous second sermon that the Buddha taught to his first five disciples according to the Mūlasarvâstivāda tradition. It’s parallel with [SN 22.59](https://suttacentral.net/sn22.59){:target="_blank"} and [T102](../alternates/T102.html). [\[back\]](#ref1)
+1. {:#n1} This sūtra is the famous second sermon that the Buddha taught to his first five disciples according to the Mūlasarvâstivāda tradition. It’s parallel with [SN 22.59](https://suttacentral.net/sn22.59){:target="_blank"} and [T102](../alternates/T102.html), and [SĀ 1.143-145](SA1_143.html){:target="_blank"} are only slightly different variants of the same template. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
