--- a/01_agama/samyukta/01/SA1_150.md
+++ b/01_agama/samyukta/01/SA1_150.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 150. Lowly'
+title: 'The Related Discourses | 1. The Aggregates | 150 (38). Lowly'
 type: kramdown
 base: ../../../
 previous: SA1_149.html
@@ -9,7 +9,7 @@ next: SA1_151.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 150. Lowly
+### 150 (38). Lowly
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
@@ -17,36 +17,37 @@ next: SA1_151.html
 2\. It was then that the Bhagavān addressed the monks, “Worldly people of lowly occupations search in various ways for wealth and livelihood, and they obtain their fortunes. Worldly people all know this. According to how something is known to worldly people, I also thus speak. Why is that? It doesn’t set me apart from worldly people.
 {:#p2}
 
-3\. “Monks, take for example a vessel in a person’s dwelling is called a ghaṭī. Some call it a pātra, some call it a pipīla, some call it a jvāla, some call it a vistha, some call it a vacana, and some call it a śarāva.[\[2\]](#n2){:#ref2} However they know it, I also thus speak. Why is that? It’s so I’m not set apart from worldly people.
+3\. “Monks, take for example a vessel in a person’s dwelling that’s called a ghaṭī. Some call it a pātra, some call it a pipīla, some call it a jvāla, some call it a vistha, some call it a vacana, and some call it a śarāva.[\[2\]](#n2){:#ref2} However they know it, I also thus speak. Why is that? It’s so I’m not set apart from worldly people.
 {:#p3}
 
 4\. Thus, monks, there’s a mundane rule of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Knowing and seeing it, I say: ‘The world is blind, without eyes, and doesn’t know or see it.’ How am I like the world that’s blind, without eyes, and doesn’t know or see it?
 {:#p4}
 
-5\. “Monks, what is the mundane rule of the world that I myself know and realize … doesn’t know or see it? Form is impermanent, painful, and liable to change. This is the mundane rule of the world. Feeling … conception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane rule of the world. Monks, this is called the mundane rule of the world that I myself know and see … How am I like those who are blind, without eyes, and don’t know or see it?”
+5\. “Monks, what is the mundane rule of the world that I know and realize … doesn’t know or see it? Form is impermanent, painful, and liable to change. This is the mundane rule of the world. Feeling … conception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane rule of the world. Monks, this is called the mundane rule of the world that I know and see … How am I like those who are blind, without eyes, and don’t know or see it?”
 {:#p5}
 
 6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p6}
 
+---
+
 ### Notes
 
-1. {:#n1} This sutra is parallel with a passage in [MN 139](https://suttacentral.net/mn139){:target="_blank"} on local dialects, [SĀ 1.149](SA1_149.html){:target="_blank"} and [SN 22.94](https://suttacentral.net/sn22.94){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} These Indic names are all obscure transliteration in Chinese. I’ve consulted suggestions in a classical Chinese glossary (T2130 翻梵語), which reads the transliterations as Skt., but I notice that the parallel passage in MN 139 appears to be a better guide for reconstructing several of these terms. A couple are still a mystery to me.\\
+1. {:#n1} This sūtra is parallel with a passage in [MN 139](https://suttacentral.net/mn139){:target="_blank"} on local dialects, [SĀ 1.149](SA1_149.html){:target="_blank"} and [SN 22.94](https://suttacentral.net/sn22.94){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} These Indic names are all obscure transliterations in Chinese. I’ve consulted suggestions in a classical Chinese glossary (T2130 翻梵語), which reads the transliterations as Skt., but I notice that the parallel passage in MN 139 appears to be a better guide for reconstructing several of these terms. A couple are still a mystery to me.\\
 *ghaṭī.* Ch. 揵茨. This was a water jar, apparently used for timekeeping because it became the name for clocks in India.\\
 *pātra*. Ch. 鉢. Skt. pātra, P. patta. This is the Chinese translation of the Buddhist alms bowl.\\
-*pipīla*. Ch. 匕匕羅. Skt. pipīla? This is the Skt. name of an ant. The Chinese glossary (T2130.1032c16) claims the transliteration means a flying insect. Perhaps a word derived from an equivalent of P. pivati that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. pisīlava instead.\\
-*jvāla*. Ch. 遮留. Skt. Jvāla? The Chinese glossary (T2130.987a12) says that the transliteration means “light” (光). Jvāla seems closest to the Chinese; however, rucā is another possibility if the characters are transposed. Neither option seems appropriate for the name of a vessel, but I’ve no other clues as this point.\\
+*pipīla*. Ch. 匕匕羅. Skt. pipīla? This is the Skt. name of an ant. The Chinese glossary (T2130.1032c16) claims the transliteration means a flying insect. Alternatively, it may have been a word derived from an equivalent of P. pivati that meant something to do with drinking (cups, bowls, etc.). In MN 139, we see the term P. pisīlava instead.\\
+*jvāla*. Ch. 遮留. Skt. Jvāla? The Chinese glossary (T2130.987a12) says that the transliteration means “light” (光). Jvāla seems closest to the transliteration; however, rucā is another possibility if the characters are transposed. Neither option seems appropriate for the name of a vessel, but I’ve no other clues as this point.\\
 *vistha*. Ch. 毘悉多, Skt. vista or vistha. The glossary (T2130.987a13) offers a more well-known transliteration (婆私吒) for vasiṣṭha and translates the term as “highest” (最勝). However, the passage in MN 139 has P. vitta, which means possessions or property in general, but P. vittha means a drinking bowl. I’ve adopted the Skt. equivalent.\\
 *vacana*. Ch. 婆闍那, Skt. vacana. The glossary (T2130.987a14) offers an alternative transliteration (婆遮那) and translates the term as “speech” (語). Here, again, I haven’t discovered another option that may have been a common name of a vessel.\\
-*śarāva*. Ch. 薩牢, MCh. “sa-lau”, Skt. śarāva. In MN 139, one of the items in the list is P. sarāva, meaning a “plate, cup, saucer” depending on the source. I’ve adopted the Skt. equivalent.
- [\[back\]](#ref2)
+*śarāva*. Ch. 薩牢, MCh. “sa-lau”, Skt. śarāva. In MN 139, one of the items in the list is P. sarāva, meaning a “plate, cup, saucer” depending on the source. I’ve adopted the Skt. equivalent. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
