--- a/01_agama/samyukta/01/SA1_151.md
+++ b/01_agama/samyukta/01/SA1_151.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 151. Seeds'
+title: 'The Related Discourses | 1. The Aggregates | 151 (39). Seeds'
 type: kramdown
 base: ../../../
 previous: SA1_150.html
@@ -9,21 +9,21 @@ next: SA1_152.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 151. Seeds
+### 151 (39). Seeds
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There are five kinds of seeds. What are the five? They are root seeds, stem seeds, joint seeds, seeds that fall naturally, and fruit seeds. These five seeds aren’t split, damaged, spoiled, or blown away. [9a] They are newly ripened, firm, and substantial. When there’s earth element but no water element, those seeds won’t grow and expand. Suppose those seeds are newly ripened, firm, and substantial, and they aren’t split, damaged, or blown away. When there’s water element but no earth element, those seeds won’t grow and expand, either. Suppose those seeds are newly ripened, firm, and substantial, and they aren’t split, damaged, spoiled, or blown away. When there’s both earth element and water element, those seeds will grow and expand.
+2\. It was then that the Bhagavān addressed the monks, “There are five kinds of seeds. What are the five? They are root seeds, stem seeds, joint seeds, seeds that fall naturally, and fruit seeds. These five seeds aren’t split, damaged, spoiled, or blown away. They are newly ripened, firm, and substantial. When there’s earth element but no water element, those seeds won’t grow and expand. Suppose those seeds are newly ripened, firm, and substantial, and they aren’t split, damaged, or blown away. When there’s water element but no earth element, those seeds won’t grow and expand, either. Suppose those seeds are newly ripened, firm, and substantial, and they aren’t split, damaged, spoiled, or blown away. When there’s both earth element and water element, those seeds will grow and expand.
+{:#p2}
+
+3\. “Monks, those five seeds are analogous to the acquired aggregates together with consciousness. The earth element is like the four abodes of consciousness. The water element is like the greed and delight of consciousness abiding in the four acquired substrates.[\[2\]](#n2){:#ref2} What are the four? Consciousness abides in form and has form as its substrate. Soaked with delight and greed, it grows and expands. Consciousness abides in feeling … conception … volition and has feeling … conception … volition as its substrate. Soaked with greed and delight, it grows and expands. Monks, consciousness [abides] in them, whether it’s abiding, disappearing, or growing and expanding in the future or past.
 {:#p3}
 
-3\. “Monks, those five seeds are analogous to the acquired aggregates together with consciousness. The earth element is like the four abodes of consciousness. The water element is like the greed and delight of consciousness abiding the four acquired substrates.[\[2\]](#n2){:#ref2} What are the four? Consciousness abides in form and has form as its substrate. Soaked with delight and greed, it grows and expands. Consciousness abides in feeling … conception … volition and has feeling … conception … volition as its substrate. Soaked with greed and delight, it grows and expands. Monks, consciousness [abides] in them, whether in the future or past or it’s abiding, disappearing, or growing and expanding.
-{:#p3}
-
-4\. “Monks, suppose consciousness exists apart from form, feeling, conception, and volition, whether in the future or past or it’s abiding or arising. It would exist only as an assertion. Asking that question and not knowing this will increase one’s delusion because it’s something that’s impossible.[\[3\]](#n3){:#ref3}
+4\. “Monks, suppose consciousness exists apart from form, feeling, conception, and volition, whether it’s abiding or arising in the future or past. It would exist only as an assertion. Asking that question while not knowing this will increase someone’s delusion because it’s something that’s unsupported.[\[3\]](#n3){:#ref3}
 {:#p4}
 
-5\. “Part with greed for the element of form. After someone parts with that greed, their mental involvement  with form that produces bondage produced is ended. After that, the substrate [of form] is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.
+5\. “Part with greed for the element of form. After someone parts with that greed, their mental involvement with form that produces bondage is ended. After that, the substrate [of form] is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.
 {:#p5}
 
 6\. “Part with greed for the element of feeling … conception … volition. After someone parts with that greed, their mental involvement with volition that produces bondage is ended. After that, the substrate [of volition] is ended. After the substrate is ended, consciousness has nowhere to dwell, and it doesn’t continue to grow and expand.
@@ -38,17 +38,19 @@ next: SA1_152.html
 9\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p9}
 
+---
+
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.54](https://suttacentral.net/sn22.54){:target="_blank"}. [\[back\]](#ref1)
 2. {:#n2} *four acquired substrates*. Ch. 四取攀緣. 攀緣 is parallel with P. ārammaṇa and Skt. ārambaṇa, which means a support or basis for something. The Chinese, however, suggests a verbal meaning “climbing conditions” or “climbing on something,” evoking the image of vines climbing walls and fences. I take the intended meaning to be like the English “substrate” as something in which things grow. The metaphor of water and earth as the substrates for plant growth seems to impart this meaning. [\[back\]](#ref2)
-3. {:#n3} *something that’s impossible*. Ch. 非境界, Skt. anārambaṇa. Literally, the word means “not a support,” used to mean something that’s not an actual thing outside of the human imagination.[\[back\]](#ref1)
+3. {:#n3} *something unsupported*. Ch. 非境界, Skt. anārambaṇa. Literally, the word means “not a support,” used to mean something that’s not an actual thing outside of the human imagination. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
