--- a/01_agama/samyukta/01/SA1_16.md
+++ b/01_agama/samyukta/01/SA1_16.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 16. Teaching Liberation'
+title: 'The Related Discourses | 1. The Aggregates | 16 (10). Liberation'
 type: kramdown
 base: ../../../
 previous: SA1_15.html
@@ -9,7 +9,7 @@ next: SA1_17.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 16. Teaching Liberation
+### 16 (10). Liberation
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
@@ -17,20 +17,23 @@ next: SA1_17.html
 2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation. Thus, feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation.
 {:#p2}
 
-3\. “Noble disciples who thus observe are liberated from form and liberated from sensation … conception … volition … consciousness. I say that this is complete liberation from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
+3\. “Noble disciples who thus observe it are liberated from form and liberated from feeling … conception … volition … consciousness. I say that this is complete liberation from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
-1. {:#n1} This sūtra is parallel with [SN 22.15](https://suttacentral.net/sn22.15){:target="_blank"} and similar to [SN 22.16](https://suttacentral.net/sn22.16){:target="_blank"}-[17](https://suttacentral.net/sn22.17){:target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is parallel with [SN 22.15](https://suttacentral.net/sn22.15){:target="_blank"} and similar to [SN 22.16](https://suttacentral.net/sn22.16){:target="_blank"} and [17](https://suttacentral.net/sn22.17){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
