--- a/01_agama/samyukta/01/SA1_18.md
+++ b/01_agama/samyukta/01/SA1_18.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 18. Cause and Condition (2)'
+title: 'The Related Discourses | 1. The Aggregates | 18 (12). Causes and Conditions (2)'
 type: kramdown
 base: ../../../
 previous: SA1_17.html
@@ -9,31 +9,34 @@ next: SA1_19.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 18. Cause and Condition (2)
+### 18 (12). Causes and Conditions (2)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes or conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Feeling … conception … volition … consciousness is impermanent. Whatever causes or conditions give rise to consciousness, they are also impermanent. How could consciousness that arises from impermanent causes and conditions be permanent?
+2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes or conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Feeling … conception … volition … consciousness is impermanent. Whatever causes or conditions give rise to consciousnesses, they are also impermanent. How could consciousnesses that arise from impermanent causes and conditions be permanent?
 {:#p2}
 
-3\. “Thus, monks, form is impermanent, and feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation.
+3\. “Thus, monks, form is impermanent … Feeling … Conception … Volition … Consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation.
 {:#p3}
 
-4\. “Noble disciples who thus observe are liberated from form and liberated from feeling … conception … volition … consciousness. I say that this is equal to being liberated from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
+4\. “Noble disciples who thus observe it are liberated from form … liberated from feeling … conception … volition … consciousness. I say that this is equal to being liberated from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
 {:#p4}
 
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p5}
 
+---
+
 ### Notes
-1. {:#n1} This sūtra is parallel with [SN 22.18](https://suttacentral.net/sn22.18){:target="_blank"} and similar to [SN 22.19](https://suttacentral.net/sn22.19){:target="_blank"}-[20](https://suttacentral.net/sn22.20){:target="_blank"}. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is parallel with [SN 22.18](https://suttacentral.net/sn22.18){:target="_blank"} and similar to [SN 22.19](https://suttacentral.net/sn22.19){:target="_blank"} and [20](https://suttacentral.net/sn22.20){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
