--- a/01_agama/samyukta/01/SA1_19.md
+++ b/01_agama/samyukta/01/SA1_19.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 19. Enjoyment'
+title: 'The Related Discourses | 1. The Aggregates | 19 (13). Enjoyment'
 type: kramdown
 base: ../../../
 previous: SA1_18.html
@@ -9,37 +9,40 @@ next: SA1_20.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 19. Enjoyment
+### 19 (13). Enjoyment
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If sentient beings didn’t enjoy form, then they wouldn’t be stained by it. It’s because they do enjoy form that sentient beings are stained and attached to it. Thus, when sentient beings don’t enjoy feeling … conception … volition … consciousness, they then aren’t stained by them. It’s because sentient beings do enjoy feeling … conception … volition … consciousness that they are stained and attached to them.
+2\. It was then that the Bhagavān addressed the monks, “If sentient beings didn’t enjoy form, then they wouldn’t be stained by it. It’s because they do enjoy form that sentient beings have defiled attachment to it. Thus, when sentient beings don’t enjoy feeling … conception … volition … consciousness, they aren’t stained by it. It’s because sentient beings do enjoy feeling … conception … volition … consciousness that they have defiled attachment to it.
 {:#p2}
 
-3\. “Monks, if form weren’t trouble for sentient beings, then sentient beings wouldn’t become disillusioned with it. It’s because form is trouble for sentient beings that they do become disillusioned with it. Thus, if feeling … conception … volition … consciousness wasn’t trouble for sentient beings, they wouldn’t become disillusioned with them. It’s because feeling … conception … volition … consciousness is trouble for sentient beings that they do become disillusioned with them.
+3\. “Monks, if form weren’t trouble for sentient beings, then sentient beings wouldn’t become disillusioned with it. It’s because form is trouble for sentient beings that they do become disillusioned with it. Thus, if feeling … conception … volition … consciousness wasn’t trouble for sentient beings, they wouldn’t become disillusioned with it. It’s because feeling … conception … volition … consciousness is trouble for sentient beings that they do become disillusioned with it.
 {:#p3}
 
-4\. “Monks, if sentient beings had no escape from form, then sentient beings wouldn’t escape from it. It’s because sentient beings have an escape from form that they do escape from it. Thus, if sentient beings had no escape from feeling … conception … volition … consciousness, they wouldn’t escape from them. It’s because sentient beings have an escape from feeling … conception … volition … consciousness that they do escape from them.
+4\. “Monks, if sentient beings had no escape from form, then sentient beings wouldn’t escape from it. It’s because sentient beings have an escape from form that they do escape from it. Thus, if sentient beings had no escape from feeling … conception … volition … consciousness, they wouldn’t escape from it. It’s because sentient beings have an escape from feeling … conception … volition … consciousness that they do escape from it.
 {:#p4}
 
-5\. “Monks, if I didn’t truly know the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t have been freed, exited, and parted [from bondage], and I would have forever stood in delusion among gods, Māra, ascetics, priests, gods, and human assemblies. Nor could I have realized for myself attainment of the unsurpassed and complete awakening.
+5\. “Monks, if I didn’t truly know the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t be freed from, escaped from, and parted with [bondage]. I would have forever stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I couldn’t have realized my attainment of the unsurpassed and complete awakening.
 {:#p5}
 
-6\. “Monks, it’s because I truly knew the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape that I was freed, exited, parted, and liberated from bondage, I never again stood in delusion among gods, Māra, and Brahma or ascetic, priest, god, and human assemblies. I could also realize for myself attainment of the unsurpassed and complete awakening.”
+6\. “Monks, it’s because I truly knew the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape that I was freed from, escaped from, parted with, and liberated from bondage. I never again stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I could realize my attainment of the unsurpassed and complete awakening.”
 {:#p6}
 
 7\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p7}
 
+---
+
 ### Notes
+
 1. {:#n1} This sūtra is parallel with [SN 22.28](https://suttacentral.net/sn22.28){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
