--- a/01_agama/samyukta/01/SA1_20.md
+++ b/01_agama/samyukta/01/SA1_20.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 20. Enjoyment (2)'
+title: 'The Related Discourses | 1. The Aggregates | 20 (14). Enjoyment (2)'
 type: kramdown
 base: ../../../
 previous: SA1_19.html
@@ -9,45 +9,47 @@ next: SA1_21.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 20. Enjoyment (2)
+### 20 (14). Enjoyment (2)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “In the past, I had pursuits and practices of enjoying form. When as a result I realized[\[2\]](#n2){:#ref2} the enjoyment of form, then I truly saw it with wisdom.  Thus, I had pursuits and practices of enjoying feeling … conception … volition … consciousness. When as a result I realized the enjoyment of feeling … conception … volition … consciousness, then I truly saw it with wisdom.
+2\. It was then that the Bhagavān addressed the monks, “In the past, I had pursuits and practices of enjoying form. When I realized[\[2\]](#n2){:#ref2} the enjoyment of form as a result, I truly saw it with wisdom. Thus, I had pursuits and practices of enjoying feeling … conception … volition … consciousness. When I realized the enjoyment of feeling … conception … volition … consciousness as a result, I truly saw it with wisdom.
 {:#p2}
 
-3\. “Monks, I had the pursuits and practices of form’s trouble. When as a result I realized form’s trouble, then I truly saw it with wisdom. Thus, I had the pursuits and practices of feeling’s … conception’s … volition’s … consciousness’s trouble. When as a result I realized consciousness’s trouble, then I truly saw it with wisdom.
+3\. “Monks, I had the pursuits and practices of form’s trouble. When I realized form’s trouble as a result, I truly saw it with wisdom. Thus, I had the pursuits and practices of feeling’s … conception’s … volition’s … consciousness’s trouble. When I realized consciousness’s trouble as a result, I truly saw it with wisdom.
 {:#p3}
 
-4\. “Monks, I had the pursuits and practices of escaping form. When as a result I realized the escape from form, then I truly saw it with wisdom. Thus, I had the pursuits and practices of escaping feeling … conception … volition … consciousness. When as a result I realized the escape from consciousness, then I truly saw it with wisdom.
+4\. “Monks, I had the pursuits and practices of escaping form. When I realized the escape from form as a result, I truly saw it with wisdom. Thus, I had the pursuits and practices of escaping feeling … conception … volition … consciousness. When I realized the escape from consciousness as a result, I truly saw it with wisdom.
 {:#p4}
 
-5\. “Monks, had I not truly known the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, then I wouldn’t have been freed, parted, and exited, and I would have forever stood in delusion among gods like Māra or Brahma and ascetics, priests, gods, and human assemblies. Nor could I have realized for myself attainment of the unsurpassed and complete awakening.
-{:#p6}
+5\. “Monks, had I not truly known the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, I wouldn’t be freed from, parted with, and escaped from [bondage]. I would have forever stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I couldn’t have realized my attainment of the unsurpassed and complete awakening.
+{:#p5}
 
-6\. “Monks, I did truly know the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape. I was freed, parted, and exited, and I never again stood in delusion among gods like Māra or Brahma and ascetics, priests, gods, and human assemblies. I could also realize for myself attainment of the unsurpassed and complete awakening.”
+6\. “Monks, I did truly know the enjoyment of the five acquired aggregates to be enjoyment … trouble to be trouble … escape to be escape, and I was freed from, parted with, and escaped from [bondage]. I never again stood in delusion among the gods, Māra, Brahmā, ascetics, and priests in the assemblies of gods and humans, and I could realize my attainment of the unsurpassed and complete awakening.”
 {:#p6}
 
 7\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p7}
 
-###### Summary Verse
+#### Summary Verse
 * {:.verse}[11-14] The past explained in four ways,\\
 [15] Disillusionment and [16] liberation,\\
 [17-18] Two ways of explaining causes and conditions,\\
 [19-20] And two kinds of enjoyment.
 
+---
 
 ### Notes
+
 1. {:#n1} This sūtra is parallel with [SN 22.27](https://suttacentral.net/sn22.27){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *As a result … realized*. Ch. 隨順覺, Skt. anubodhana. [\[back\]](#ref2)
+2. {:#n2} *As a result … realized*. Ch. 隨順覺, Skt. *\*anubodhana*. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
