--- a/01_agama/samyukta/01/SA1_4.md
+++ b/01_agama/samyukta/01/SA1_4.md
@@ -26,14 +26,17 @@ next: SA1_5.html
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {: #p5}
 
+---
+
 ### Notes
-1. {:#n1} This sūtra has been reconstituted following the description of variant sūtras found at *T* 99.1a14, which replaces ‘impermanent’ in SĀ 1.1 with ‘not self.’ [SN 22.14](https://suttacentral.net/sn22.14){:target="_blank"}, [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}, and [SĀ 2.4](../02/SA2_4.html){:target="_blank"} are close parallels. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra has been reconstituted following the description of variant sūtras found at T99.1a14, which replaces “impermanent” in SĀ 1.1 with “not self.” [SN 22.14](https://suttacentral.net/sn22.14){:target="_blank"}, [SN 22.51](https://suttacentral.net/sn22.51){:target="_blank"}, and [SĀ 2.4](../02/SA2_4.html){:target="_blank"} are close parallels. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
