--- a/01_agama/samyukta/01/SA1_8.md
+++ b/01_agama/samyukta/01/SA1_8.md
@@ -23,14 +23,17 @@ next: SA1_9.html
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
-1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with SĀ 2.8. The *Taisho* version of this sutra copies content from SĀ 1.10 (7) into its beginning. I’ve followed Yinshun’s lead in deleting this material as spurious on the grounds that the uddāna for this group of sūtras only mentions one sūtra on delight. We should also note that [SĀ 2.8](../02/SA2_8.html){:target="_blank"} would be a strong parallel if we delete the added material, which then maintains the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. [\[back\]](#ref1)
+
+1. {:#n1} This sūtra is similar to [SN 22.24](https://suttacentral.net/sn22.24){:target="_blank"} and parallel with [SĀ 2.8](../02/SA2_8.html){:target="_blank"}. The *Taisho* version of this sūtra copies content from [SĀ 1.10 (7)](SA1_10.html){:target="_blank"} into its beginning. I’ve followed Yinshun’s lead in ignoring this material as spurious on the grounds that the summary verse for this group of sūtras only mentions one sūtra on delight. We should also note that [SĀ 2.8](../02/SA2_8.html){:target="_blank"} would be a strong parallel if we delete the added material, which would then maintain the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 17 October 2022
 {: .revised}
 
 ---
